--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <servlet.version>3.1.0</servlet.version>
         <slf4j.version>1.7.36</slf4j.version>
         <spring.version>5.3.21</spring.version>
-        <spring-ldap-core.version>2.3.6.RELEASE</spring-ldap-core.version>
+        <spring-ldap-core.version>2.4.1</spring-ldap-core.version>
         <spring.security.version>5.6.6</spring.security.version>
         <spring-webflow.version>2.5.1.RELEASE</spring-webflow.version>
         <tomcat.version>9.0.64</tomcat.version>
