--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,8 +17,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  #schedule:
-    # - cron: '35 13 * * 3'
+  schedule:
+    - cron: '35 13 * * 3'
 
 jobs:
   analyze:
