--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
-        <version>31</version>
+        <version>33</version>
     </parent>
 
     <prerequisites>
@@ -40,42 +40,41 @@
         <apacheds.version>2.0.0.AM27</apacheds.version>
         <bval.version>2.0.6</bval.version>
         <commons.dbcp2.version>2.12.0</commons.dbcp2.version>
-        <commons.logging.version>1.2</commons.logging.version>
-        <commons.text.version>1.11.0</commons.text.version>
-        <commons.validator.version>1.8.0</commons.validator.version>
-        <cxf.version>3.5.8</cxf.version>
+        <commons.text.version>1.12.0</commons.text.version>
+        <commons.validator.version>1.9.0</commons.validator.version>
+        <cxf.version>3.6.4</cxf.version>
         <cxf.build-utils.version>3.4.4</cxf.build-utils.version>
-        <easymock.version>5.2.0</easymock.version>
-        <ehcache3.version>3.9.11</ehcache3.version>
+        <easymock.version>5.4.0</easymock.version>
+        <ehcache3.version>3.10.8</ehcache3.version>
         <jcache.version>1.1.1</jcache.version>
         <hsqldb.version>2.5.2</hsqldb.version>
         <htmlunit.version>2.70.0</htmlunit.version>
-        <jackson.version>2.17.0</jackson.version>
+        <jackson.version>2.17.1</jackson.version>
         <jaxb.runtime.version>2.3.9</jaxb.runtime.version>
         <jaxb.version>2.3.3</jaxb.version>
-        <jetty9.version>9.4.54.v20240208</jetty9.version>
-        <junit.version>5.10.2</junit.version>
+        <jetty9.version>9.4.55.v20240627</jetty9.version>
+        <junit.version>5.10.3</junit.version>
         <kerby.version>2.0.3</kerby.version>
-        <log4j.version>2.23.1</log4j.version>
+        <log4j.version>2.24.1</log4j.version>
         <openjpa.version>3.2.2</openjpa.version>
         <servlet.version>4.0.1</servlet.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <spring.version>5.3.33</spring.version>
+        <spring.version>5.3.37</spring.version>
         <spring-ldap-core.version>2.4.1</spring-ldap-core.version>
-        <spring.security.version>5.6.12</spring.security.version>
+        <spring.security.version>5.8.11</spring.security.version>
         <spring-webflow.version>2.5.1.RELEASE</spring-webflow.version>
-        <tomcat.version>9.0.87</tomcat.version>
+        <tomcat.version>9.0.90</tomcat.version>
         <validation-api.version>2.0.2</validation-api.version>
         <wss4j.version>2.4.3</wss4j.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jdk.version>1.8</jdk.version>
+        <maven.compiler.release>11</maven.compiler.release>
         <compiler.fork>false</compiler.fork>
 
         <fediz.protect-xmlschema-collections>false</fediz.protect-xmlschema-collections>
-        <fediz.surefire.fork.mode>once</fediz.surefire.fork.mode>
+        <fediz.surefire.fork.count>1</fediz.surefire.fork.count>
         <fediz.surefire.format>brief</fediz.surefire.format>
         <fediz.surefire.usefile>false</fediz.surefire.usefile>
         <fediz.surefire.parallel.mode />
@@ -275,8 +274,42 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <dependency>
+                <groupId>org.ehcache</groupId>
+                <artifactId>ehcache</artifactId>
+                <version>${ehcache3.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.glassfish.jaxb</groupId>
+                        <artifactId>jaxb-runtime</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb.runtime.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.ws</groupId>
+            <artifactId>jakarta.xml.ws-api</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <defaultGoal>install</defaultGoal>
@@ -316,13 +349,15 @@
                     <version>3.6.3</version>
                     <configuration>
                         <attach>true</attach>
-                        <source>${jdk.version}</source>
                         <quiet>true</quiet>
                         <bottom>Apache Fediz</bottom>
                         <encoding>UTF-8</encoding>
                         <detectOfflineLinks>false</detectOfflineLinks>
                         <notimestamp>true</notimestamp>
                         <!--subpackages>org.apache.cxf</subpackages-->
+                        <additionalJOptions>
+                            <additionalJOption>-Xdoclint:none</additionalJOption>
+                        </additionalJOptions>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -335,8 +370,6 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.13.0</version>
                     <configuration>
-                        <source>${jdk.version}</source>
-                        <target>${jdk.version}</target>
                         <compilerArgs>
                             <arg>-XDcompilePolicy=simple</arg>
                             <arg>-Xplugin:ErrorProne</arg>
@@ -373,7 +406,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>3.2.5</version>
+                    <version>3.3.1</version>
                 </plugin>
                 <!-- TODO commented out for now
                 <plugin>
@@ -442,7 +475,7 @@
                         <dependency>
                             <groupId>com.puppycrawl.tools</groupId>
                             <artifactId>checkstyle</artifactId>
-                            <version>8.41</version>
+                            <version>10.17.0</version>
                        </dependency>
                     </dependencies>
                     <configuration>
@@ -485,7 +518,6 @@
                             <ruleset>${fediz.resources.base.path}cxf-pmd-ruleset.xml</ruleset>
                             <ruleset>${fediz.resources.base.path}cxf-pmd-custom.xml</ruleset>
                         </rulesets>
-                        <targetJdk>${jdk.version}</targetJdk>
                         <failOnViolation>true</failOnViolation>
                         <linkXRef>false</linkXRef>
                         <includeTests>true</includeTests>
@@ -507,7 +539,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.2.5</version>
+                    <version>3.3.1</version>
                     <configuration>
                         <includes>
                             <include>**/*Test.java</include>
@@ -523,7 +555,7 @@
                         <runOrder>alphabetical</runOrder>
                         <reportFormat>${fediz.surefire.format}</reportFormat>
                         <useFile>${fediz.surefire.usefile}</useFile>
-                        <forkMode>${fediz.surefire.fork.mode}</forkMode>
+                        <forkCount>${fediz.surefire.fork.count}</forkCount>
                         <childDelegation>false</childDelegation>
                         <argLine>${fediz.surefire.fork.vmargs}</argLine>
                         <enableAssertions>${fediz.surefire.enable.assertions}</enableAssertions>
@@ -641,8 +673,6 @@
                             <artifactId>maven-compiler-plugin</artifactId>
                             <version>3.13.0</version>
                             <configuration>
-                                <source>${jdk.version}</source>
-                                <target>${jdk.version}</target>
                                 <maxmem>256M</maxmem>
                                 <fork>${compiler.fork}</fork>
                             </configuration>
@@ -670,94 +700,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>jdk18</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <configuration>
-                                <additionalJOptions>
-                                    <additionalJOption>-Xdoclint:none</additionalJOption>
-                                </additionalJOptions>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <configuration>
-                                <fork>true</fork>
-                                <compilerArgs combine.children="append">
-                                    <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/9+181-r4173-1/javac-9+181-r4173-1.jar</arg>
-                                </compilerArgs>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk9-plus</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <configuration>
-                                <additionalJOptions>
-                                    <additionalJOption>-Xdoclint:none</additionalJOption>
-                                </additionalJOptions>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <configuration>
-                                <fork>true</fork>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-assembly-plugin</artifactId>
-                            <configuration>
-                                <finalName>${project.artifactId}-${project.version}-java11</finalName>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-            <dependencies>
-                <dependency>
-                    <groupId>jakarta.xml.bind</groupId>
-                    <artifactId>jakarta.xml.bind-api</artifactId>
-                    <version>${jaxb.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.glassfish.jaxb</groupId>
-                    <artifactId>jaxb-runtime</artifactId>
-                    <version>${jaxb.runtime.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>jakarta.annotation</groupId>
-                    <artifactId>jakarta.annotation-api</artifactId>
-                    <version>1.3.5</version>
-                </dependency>
-                <dependency>
-                    <groupId>jakarta.xml.ws</groupId>
-                    <artifactId>jakarta.xml.ws-api</artifactId>
-                    <version>2.3.3</version>
-                </dependency>
-            </dependencies>
         </profile>
         <profile>
             <id>fastinstall</id>
