--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read  
+      contents: read
       pull-requests: read
     timeout-minutes: 130
     steps:
@@ -23,6 +23,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Apache Maven
-        run: mvn -U clean install -Djava.awt.headless=true -fae -B -Peverything
+        run: mvn -U clean install -Djava.awt.headless=true -fae -B
     env: 
        MAVEN_OPTS: "-Xmx1024M"
