--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -11,18 +11,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read  
+      contents: read
       pull-requests: read
     timeout-minutes: 130
     steps:
-      - uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633
-      - name: Set up JDK 8
-        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
+      - uses: actions/checkout@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
-          java-version: '8'
+          java-version: '11'
           distribution: 'temurin'
           cache: maven
       - name: Build with Apache Maven
-        run: mvn -U clean install -Djava.awt.headless=true -fae -B -Peverything
+        run: mvn -U clean install -Djava.awt.headless=true -fae -B
     env: 
        MAVEN_OPTS: "-Xmx1024M"
