--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>fediz</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.7.0</version>
     <name>Apache Fediz</name>
     <packaging>pom</packaging>
 
@@ -93,13 +93,13 @@
         <fediz.downloadSources>true</fediz.downloadSources>
 
         <fediz.resources.base.path />
-        <project.build.outputTimestamp>1711012796</project.build.outputTimestamp>
+        <project.build.outputTimestamp>1730884089</project.build.outputTimestamp>
     </properties>
 
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/cxf-fediz.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/cxf-fediz.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>fediz-1.7.0</tag>
     </scm>
 
     <issueManagement>
