--- a/pom.xml
+++ b/pom.xml
@@ -39,31 +39,31 @@
     <properties>
         <apacheds.version>2.0.0.AM27</apacheds.version>
         <bval.version>2.0.6</bval.version>
-        <commons.dbcp2.version>2.12.0</commons.dbcp2.version>
+        <commons.dbcp2.version>2.13.0</commons.dbcp2.version>
         <commons.text.version>1.13.0</commons.text.version>
         <commons.validator.version>1.9.0</commons.validator.version>
-        <cxf.version>3.6.4</cxf.version>
-        <cxf.build-utils.version>3.4.4</cxf.build-utils.version>
-        <easymock.version>5.4.0</easymock.version>
+        <cxf.version>3.6.6</cxf.version>
+        <cxf.build-utils.version>4.1.0</cxf.build-utils.version>
+        <easymock.version>5.5.0</easymock.version>
         <ehcache3.version>3.10.8</ehcache3.version>
         <jcache.version>1.1.1</jcache.version>
         <hsqldb.version>2.5.2</hsqldb.version>
         <htmlunit.version>2.70.0</htmlunit.version>
-        <jackson.version>2.18.1</jackson.version>
+        <jackson.version>2.18.2</jackson.version>
         <jaxb.runtime.version>2.3.9</jaxb.runtime.version>
         <jaxb.version>2.3.3</jaxb.version>
         <jetty9.version>9.4.55.v20240627</jetty9.version>
-        <junit.version>5.10.3</junit.version>
+        <junit.version>5.12.0</junit.version>
         <kerby.version>2.1.0</kerby.version>
-        <log4j.version>2.24.1</log4j.version>
+        <log4j.version>2.24.3</log4j.version>
         <openjpa.version>3.2.2</openjpa.version>
         <servlet.version>4.0.1</servlet.version>
         <slf4j.version>1.7.36</slf4j.version>
         <spring.version>5.3.39</spring.version>
-        <spring-ldap-core.version>2.4.1</spring-ldap-core.version>
-        <spring.security.version>5.8.15</spring.security.version>
+        <spring-ldap-core.version>2.4.4</spring-ldap-core.version>
+        <spring.security.version>5.8.16</spring.security.version>
         <spring-webflow.version>2.5.1.RELEASE</spring-webflow.version>
-        <tomcat.version>9.0.90</tomcat.version>
+        <tomcat.version>9.0.102</tomcat.version>
         <validation-api.version>2.0.2</validation-api.version>
         <wss4j.version>2.4.3</wss4j.version>
 
@@ -349,13 +349,13 @@
                     <configuration>
                         <compilerArgs>
                             <arg>-XDcompilePolicy=simple</arg>
-                            <!--<arg>-Xplugin:ErrorProne</arg>-->
+                            <arg>-Xplugin:ErrorProne</arg>
                         </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>com.google.errorprone</groupId>
                                 <artifactId>error_prone_core</artifactId>
-                                <version>2.10.0</version>
+                                <version>2.31.0</version>
                             </path>
                         </annotationProcessorPaths>
                     </configuration>
@@ -482,18 +482,27 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
-                    <version>3.14.0</version>
+                    <version>3.23.0</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.cxf.build-utils</groupId>
                             <artifactId>cxf-buildtools</artifactId>
                             <version>${cxf.build-utils.version}</version>
                         </dependency>
+                        <dependency>
+                            <groupId>net.sourceforge.pmd</groupId>
+                            <artifactId>pmd-core</artifactId>
+                            <version>7.11.0</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>net.sourceforge.pmd</groupId>
+                            <artifactId>pmd-java</artifactId>
+                            <version>7.11.0</version>
+                        </dependency>
                     </dependencies>
                     <configuration>
                         <rulesets>
                             <ruleset>${fediz.resources.base.path}cxf-pmd-ruleset.xml</ruleset>
-                            <ruleset>${fediz.resources.base.path}cxf-pmd-custom.xml</ruleset>
                         </rulesets>
                         <failOnViolation>true</failOnViolation>
                         <linkXRef>false</linkXRef>
