--- a/examples/jaxrsCxfPluginWebapp/pom.xml
+++ b/examples/jaxrsCxfPluginWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>examples</artifactId>
-        <version>1.7.1-SNAPSHOT</version>
+        <version>1.7.1</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>jaxrsCxfPluginWebapp</artifactId>
